[project]
name = "prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.2",
    "pytest>=8.4.1",
    "regex>=2025.7.34",
    "scalene>=1.5.53",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]


[tool.ruff.lint]
ignore = ["E402", "F403", "F405", "F722", "F821"]